# PizzaServeAPI

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.md  alembic.ini  docker-compose-pycharm.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
.gitlab/: Readme.md
.gitlab/Badges/: Badges.html
.gitlab/issue_templates/: CheckListLab_1.md  CheckListLab_2.md  CheckListLab_3.md  CheckListLab_4.md  CheckListLab_5.md  CheckListLab_6.md  CheckListLab_7.md  CheckListLab_8.md  CheckListLab_9.md  UserStoryTemplate.md
app/: main.py
app/api/v1/: router.py
app/database/: connection.py  models.py
app/database/migrations/: env.py
app/database/migrations/versions/: 296356d2ac0e_add_sauce.py  40ae859bce90_init.py  e2452ef12b73_my_new_feature.py
app/exceptions/: nominatim_error.py
doc/: README.md
doc/cicd_strategy/: BPSE-CICD-Pipeline.drawio  README.md
doc/coding_conventions/: README.md
doc/domain_model/: README.md
doc/local_dev_setup/: README.md
doc/testing/: README.md
doc/tooling/: README.md
doc/versioning_commit_messages/: README.md
infra/build_artifacts/: development.dockerfile  docker-entrypoint.sh  release.dockerfile  smoke.sh
infra/deployment/: deployment-production.yaml  deployment-staging.yaml  kubeconfig
tests/integration/api/v1/: test_beverage.py  test_dough.py  test_order.py  test_order_status.py  test_pizza_type.py  test_sauce.py  test_topping.py  test_user.py
tests/unit/: report_unit_tests.xml
tests/unit/api/v1/: conftest.py  test_address_schemas.py  test_beverage_schemas.py  test_dough_schemas.py  test_order_schemas.py  (+3 more)
(+59 files in other folders)
