[tool.poetry]
name = "1337_pizza"
version = "1.0.0"
description = "1337 Pizza is a pizza delivery company, that has specialized on the needs of nerds"
authors = ["Dummy <dummy@dummy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "0.92.0"
alembic = "1.9.4"
sqlalchemy = "2.0.4"
uvicorn = "0.20.0"
python-dotenv = "0.1"
psycopg2-binary = "2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
tavern = "2.0.5"
pytest-cov = "4.0.0"
coverage = {version = "7.2.1", extras= ["toml"]}
flakeheaven = "3.2.1"
flake8-commas = "2.1.0"
flake8-quotes = "3.3.2"
mypy = "1.0.1"
pytest-mock = "3.10.0"

[tool.pytest.ini_options]
minversion = "7.2.1"
addopts = "--import-mode=importlib"

[tool.flakeheaven]
exclude = ["example.py", "setup.py", "README.rst", "app/database/migrations/"]
max_line_length = 120
show_source = true

[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

[tool.coverage.run]
source = ["app"]
omit = ["app/database/migrations/*"]

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.core.masonry.api"